--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cmake.configureOnOpen": false,
     "files.associations": {
         "main.h": "c",
-        "stm32f4xx.h": "c"
+        "stm32f4xx.h": "c",
+        "my_timer.h": "c"
     }
 }
