8 cylinder simulation with a timer for turning injectors off

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "files.associations": {
         "main.h": "c",
         "stm32f4xx.h": "c",
-        "my_timer.h": "c"
+        "my_timer.h": "c",
+        "cmsis_os2.h": "c"
     }
 }
