--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "stm32f4xx.h": "c",
         "my_timer.h": "c",
         "cmsis_os2.h": "c",
-        "usb_rcv.h": "c"
+        "usb_rcv.h": "c",
+        "usbd_cdc_if.h": "c"
     }
 }
