Ctrl-F5 to launch "flash & run" task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,7 +36,7 @@
             "problemMatcher": []
         },
         {
-            "label": "run",
+            "label": "flash & run",
             "type": "shell",
             "command": "STM32_Programmer_CLI",
             "args": [
